# test

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pseudo_tv.example.yaml  pyproject.toml  readme.md  requirements.txt
pseudo_tv/: __init__.py  app.py  config.py  library.py  models.py  player.py  scheduler.py
